--- a/project/src/config.yaml
+++ b/project/src/config.yaml
@@ -8,14 +8,33 @@ cfg:
   pool_period_ms: 1000
   changes_only: False
 
-sfs_pins:
-  -name: TestPin
-  pool_period_ms: 100
-  changes_only: False
-  file_value: "/sys/devices/platform/soc/1c20800.pinctrl/gpiochip0/gpio/gpio132/value"
-  type: out
-  file_dir: "/sys/devices/platform/soc/1c20800.pinctrl/gpiochip0/gpio/gpio132/direction"
-  
+sysfs_pins:
+  - name: Mod1_K12
+    pool_period_ms: 100
+    changes_only: False
+    topic: "dev/extender/do12"
+    #file_value: "/sys/devices/platform/soc/1c20800.pinctrl/gpiochip0/gpio/gpio132/value"
+    file_value: "/sys/class/gpio/gpio563/value"
+    type: DO
+    create_empty_topic: True
+    init:
+      - file: "/sys/class/gpio/export"
+        text: "563"
+      - file: "/sys/class/gpio/gpio563/direction"
+        text: "out"
+  - name: Mod2_DI1
+    pool_period_ms: 100
+    changes_only: False
+    topic: "dev/extender/di1"
+    #file_value: "/sys/devices/platform/soc/1c20800.pinctrl/gpiochip0/gpio/gpio132/value"
+    file_value: "/sys/class/gpio/gpio512/value"
+    type: DI
+    create_empty_topic: True
+    init:
+      - file: "/sys/class/gpio/export"
+        text: "563"
+      - file: "/sys/class/gpio/gpio563/direction"
+        text: "in"  
 
   # the following data could be used for test purposes
 
