--- a/project/src/config.yaml
+++ b/project/src/config.yaml
@@ -9,30 +9,107 @@ cfg:
   changes_only: False
 
 sysfs_pins:
-  - name: Mod1_K12
+  # the following data could be used for test purposes
+  # JH D1
+  # - name: LedRed
+  #   type: OUT
+  #   pool_period_ms: 100
+  #   changes_only: False
+  #   topic: "test/dev/LedRed"
+  #   file_value: "/sys/class/gpio/gpio538/value"
+  #   create_start_topic: True
+  #   init:
+  #     - file: "/sys/class/gpio/export"
+  #       text: "538"
+  #     - file: "/sys/class/gpio/gpio563/direction"
+  #       text: "out"
+
+  - name: LedGreen
+    type: OUT
+    topic: "test/dev/LedGreen"
+    file_value: "/sys/class/gpio/gpio539/value"
+    create_start_topic: True
+
+  - name: UserBtn
+    type: IN
     pool_period_ms: 100
     changes_only: False
-    topic: "dev/extender/do12"
-    file_value: "/sys/class/gpio/gpio563/value"
-    type: DO
-    create_empty_topic: True
+    topic: "test/dev/UserBtn"
+    file_value: "/sys/class/gpio/gpio522/value"
+    create_start_topic: True
     init:
       - file: "/sys/class/gpio/export"
         text: "563"
-      - file: "/sys/class/gpio/gpio563/direction"
-        text: "out"
-  - name: Mod2_DI1
-    pool_period_ms: 100
-    changes_only: False
-    topic: "dev/extender/di1"
-    file_value: "/sys/class/gpio/gpio512/value"
-    type: DI
-    create_empty_topic: True
-    init:
-      - file: "/sys/class/gpio/export"
-        text: "563"
-      - file: "/sys/class/gpio/gpio563/direction"
+      - file: "/sys/class/gpio/gpio522/direction"
         text: "in"  
 
-  # the following data could be used for test purposes
+  - name: DI_1
+    type: IN
+    topic: "test/dev/DI_1"
+    file_value: "/sys/class/gpio/gpio558/value"
+    create_start_topic: True
+
+  - name: DI_2
+    type: IN
+    topic: "test/dev/DI_2"
+    file_value: "/sys/class/gpio/gpio557/value"
+    create_start_topic: True    
+
+  - name: DI_3
+    type: IN
+    topic: "test/dev/DI_3"
+    file_value: "/sys/class/gpio/gpio556/value"
+    create_start_topic: True
+
+  - name: DI_4
+    type: IN
+    topic: "test/dev/DI_4"
+    file_value: "/sys/class/gpio/gpio555/value"
+    create_start_topic: True
+
+  - name: DO_1
+    type: OUT
+    topic: "test/dev/DO_1"
+    file_value: "/sys/class/gpio/gpio542/value"
+    create_start_topic: True
+
+  - name: DO_2
+    type: OUT
+    topic: "test/dev/DO_2"
+    file_value: "/sys/class/gpio/gpio541/value"
+    create_start_topic: True    
+
+  - name: DO_3
+    type: OUT
+    topic: "test/dev/DO_3"
+    file_value: "/sys/class/gpio/gpio540/value"
+    create_start_topic: True
+
+  # WB7
+  # - name: Mod1_K12
+  #   pool_period_ms: 100
+  #   changes_only: False
+  #   topic: "dev/extender/do12"
+  #   file_value: "/sys/class/gpio/gpio563/value"
+  #   type: OUT
+  #   create_start_topic: True
+  #   init:
+  #     - file: "/sys/class/gpio/export"
+  #       text: "563"
+  #     - file: "/sys/class/gpio/gpio563/direction"
+  #       text: "out"
+  # - name: Mod2_DI1
+  #   pool_period_ms: 100
+  #   changes_only: False
+  #   topic: "dev/extender/di1"
+  #   file_value: "/sys/class/gpio/gpio512/value"
+  #   type: IN
+  #   create_start_topic: True
+  #   init:
+  #     - file: "/sys/class/gpio/export"
+  #       text: "563"
+  #     - file: "/sys/class/gpio/gpio563/direction"
+  #       text: "in"  
+
+
 
