--- a/project/scripts/package/etc/gpio-mqtt/config.yaml
+++ b/project/scripts/package/etc/gpio-mqtt/config.yaml
@@ -9,28 +9,6 @@ cfg:
   changes_only: True
   status_period_sec: 10
 
-convert_tables:
-  - &bin_filter 
-    - name: on_value
-      broker: 1
-      file: 1
-    - name: off_value
-      broker: 0
-      file: 0
-    - broker: "*"
-      file: null
-    - broker: null
-      file: "*"      
-  - &bool_to_bin 
-    - broker: "True"
-      file: 1
-    - broker: "False"
-      file: 0
-    - broker: "*"
-      file: null
-    - broker: null
-      file: "*"
-
 
 sysfs_pins:
 
@@ -83,55 +61,41 @@ sysfs_pins:
         text: "in"  
 
 
-  # - name: DI_1
-  #   type: IN
-  #   topic: "test/dev/DI_1"
-  #   file_value: "/sys/class/gpio/gpio558/value"
-  #   create_start_topic: True
-  #   changes_only: True
+  - name: DI_1
+    type: IN
+    topic: "test/dev/DI_1"
+    file_value: "/sys/class/gpio/gpio558/value"
+    create_start_topic: True
+    changes_only: True
 
-  # - name: DI_2
-  #   type: IN
-  #   topic: "test/dev/DI_2"
-  #   file_value: "/sys/class/gpio/gpio557/value"
-  #   create_start_topic: True    
+  - name: DI_2
+    type: IN
+    topic: "test/dev/DI_2"
+    file_value: "/sys/class/gpio/gpio557/value"
+    create_start_topic: True    
 
-  # - name: DI_3
-  #   type: IN
-  #   topic: "test/dev/DI_3"
-  #   file_value: "/sys/class/gpio/gpio556/value"
-  #   create_start_topic: True
+  - name: DI_3
+    type: IN
+    topic: "test/dev/DI_3"
+    file_value: "/sys/class/gpio/gpio556/value"
+    create_start_topic: True
 
-  # - name: DI_4
-  #   type: IN
-  #   topic: "test/dev/DI_4"
-  #   file_value: "/sys/class/gpio/gpio555/value"
-  #   create_start_topic: True
+  - name: DI_4
+    type: IN
+    topic: "test/dev/DI_4"
+    file_value: "/sys/class/gpio/gpio555/value"
+    create_start_topic: True
 
 ##############################################################33
 # Section
   - name: DO_1
     type: OUT
-    #topic_wr: "test/dev/DO_1/on"
-    topic_rd: "test/dev/DO_1"
-    topic_cmd: "test/dev/DO_1/on"
-    #topic_state: "test/dev/DO_1"
-    convert_table: 
-      - broker: "True"
-        file: "1"
-      - broker: "False"
-        file: "0"
-      - broker: "*"
-        file: null
-      - broker: null
-        file: "*"
+    topic: "test/dev/DO_1"
     file_value: "/sys/class/gpio/gpio542/value"
     create_start_topic: True
     changes_only: True
     pool_period_ms: 1000
     status_period_sec: 600
-
-######################################################################
 
   - name: DO_2
     type: OUT
@@ -144,30 +108,4 @@ sysfs_pins:
     topic: "test/dev/DO_3"
     file_value: "/sys/class/gpio/gpio540/value"
     create_start_topic: True
-
-  # WB7
-  # - name: Mod1_K12
-  #   pool_period_ms: 100
-  #   changes_only: False
-  #   topic: "dev/extender/do12"
-  #   file_value: "/sys/class/gpio/gpio563/value"
-  #   type: OUT
-  #   create_start_topic: True
-  #   init:
-  #     - file: "/sys/class/gpio/export"
-  #       text: "563"
-  #     - file: "/sys/class/gpio/gpio563/direction"
-  #       text: "out"
-  # - name: Mod2_DI1
-  #   pool_period_ms: 100
-  #   changes_only: False
-  #   topic: "dev/extender/di1"
-  #   file_value: "/sys/class/gpio/gpio512/value"
-  #   type: IN
-  #   create_start_topic: True
-  #   init:
-  #     - file: "/sys/class/gpio/export"
-  #       text: "563"
-  #     - file: "/sys/class/gpio/gpio563/direction"
-  #       text: "in"  
 
