Cfg in param and fix for multi confogs in Home

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             //"args": "${command:pickArgs}"
-            "args": "-v",
+            "args": "-v",// -c config.yaml",
             "sudo": true
         }
     ]
