config example, fix for python 3.9 and modules recognition algorithm

--- a/project/src/config.yaml
+++ b/project/src/config.yaml
@@ -31,6 +31,31 @@ convert_tables:
     - broker: null
       file: "*"
 
+ext_i2c:
+  # Секция описывает расположение боковых модулей ввода/вывода
+  # начиная со стороны контроллера
+
+  # модули одинакового вида (DO/DI) располагаются одной группой
+  # не более 4 модулей одного вида (DO/DI)
+  # не более 8 модулей DO/DI всего
+  
+  # поддерживаемые варианты:
+  #- wbio-do-r1g-16  # Модуль релейных выходов 1А для контакторов
+  #- wbio-do-r3a-8   # Модуль релейных выходов 3A
+  #- wbio-do-ssr-8   # Модуль дискретных выходов типа «сухой контакт»
+  #- wbio-di-hvd-16  # Модуль-детектор наличия сетевого напряжения 230 В
+  #- wbio-di-hvd-8   # Модуль-детектор наличия сетевого напряжения 230 В
+  #- wbio-di-dr-14   # Модуль дискретных входов типа "сухой контакт"
+  #- wbio-di-dr-8    # Модуль дискретных входов типа "сухой контакт"
+  
+  #- do#            # модуль дискретных вЫходов разрядностью "#"
+  #- di#            # модуль дискретных входов разрядностью "#"
+
+  - wbio-di-dr-8
+  - wbio-di-hvd-16 
+  - do12
+  - do8  
+
 
 sysfs_pins:
 
