example of config

--- a/project/src/config.yaml
+++ b/project/src/config.yaml
@@ -32,30 +32,119 @@ convert_tables:
       file: "*"
 
 ext_i2c:
-  # Секция описывает расположение боковых модулей ввода/вывода
-  # начиная со стороны контроллера
+    # Секция описывает расположение боковых модулей ввода/вывода
+    # начиная со стороны контроллера
 
-  # модули одинакового вида (DO/DI) располагаются одной группой
-  # не более 4 модулей одного вида (DO/DI)
-  # не более 8 модулей DO/DI всего
-  
-  # поддерживаемые варианты:
-  #- wbio-do-r1g-16  # Модуль релейных выходов 1А для контакторов
-  #- wbio-do-r3a-8   # Модуль релейных выходов 3A
-  #- wbio-do-ssr-8   # Модуль дискретных выходов типа «сухой контакт»
-  #- wbio-di-hvd-16  # Модуль-детектор наличия сетевого напряжения 230 В
-  #- wbio-di-hvd-8   # Модуль-детектор наличия сетевого напряжения 230 В
-  #- wbio-di-dr-14   # Модуль дискретных входов типа "сухой контакт"
-  #- wbio-di-dr-8    # Модуль дискретных входов типа "сухой контакт"
-  
-  #- do#            # модуль дискретных вЫходов разрядностью "#"
-  #- di#            # модуль дискретных входов разрядностью "#"
+    common_path: devices
+    # общий путь для всех топиков секции
+    # опционально.
+    # если не установлено - то используется пустое значение - обращение начинается от корня: "/"
 
-  #- wbio-di-dr-8
-  #- wbio-di-hvd-16 
-  #- do12
-  - do16  
-  - di8
+    repetition_time_sec: 500
+    # период принудительного опроса и отправки состояния в брокер
+    # опционально.
+    # если не установлено - то отправка только по изменению
+
+    reset_to_def_topic: reset_all
+    # пример: Relative/Path/To/Set/Topic 
+    # итоговое значение для записи: common_path/reset_to_def_topic
+    # топик для сброса всех выходов в исходное состояние
+    # опционально.
+
+    # боковые модули
+
+    # модули одинакового вида (DO/DI) располагаются одной группой
+    # не более 4 модулей одного вида (DO/DI)
+    # не более 8 модулей DO/DI всего
+    
+    # поддерживаемые варианты:
+    #- wbio-do-r1g-16  # Модуль релейных выходов 1А для контакторов
+    #- wbio-do-r3a-8   # Модуль релейных выходов 3A
+    #- wbio-do-ssr-8   # Модуль дискретных выходов типа «сухой контакт»
+    #- wbio-di-hvd-16  # Модуль-детектор наличия сетевого напряжения 230 В
+    #- wbio-di-hvd-8   # Модуль-детектор наличия сетевого напряжения 230 В
+    #- wbio-di-dr-14   # Модуль дискретных входов типа "сухой контакт"
+    #- wbio-di-dr-8    # Модуль дискретных входов типа "сухой контакт"
+    
+    #- do#            # модуль дискретных вЫходов разрядностью "#"
+    #- di#            # модуль дискретных входов разрядностью "#"
+
+    modules:
+      # отбика каждой следующей дочерней секции производится через отступы и символы "-"
+
+      - type: do16  
+        # тип модуля из поддерживаемых вариантов
+
+        repetition_time_sec: 500
+        # период принудительного опроса и отправки состояния в брокер
+        # индивидуально для данного конкретного модуля
+        # опционально.
+        # если не установлено - то используется значение из вышестоящей секции
+
+        control_path: do16/controls
+        # относительный путь для управления и индикации состояния данного конкретного модуля
+        # сценарий: используется для добавления дополнительных уровней в имя топика
+        # пример: module_name/control
+        # итоговое значение для записи и чтения:"common_path"/"control_path"
+        # опционально.
+        # если не установлено - то используется порядковый номер модуля на дин рейке
+
+        start_state: "None"
+        # start_state: [0, 1, "LastState", "None"]
+        # установить состояние модуля вывода при старте сервиса
+        # 0 - сбросить все контакты
+        # 1 - взвести все контакты
+        # "LastState" - восстановить последнее установленное значение
+        # "None" - ничего не предпринимать
+        # опционально.
+        # если не установлено - то используется "None"
+
+        pins:
+        # настройки для контактов модулей индивидуально
+        # опционально.
+        # если не установлено - то для отображения используется порядковый номер контактов модуля
+
+        - num: 1 
+          # номер контакта, к которому задаются индивидуальные настройки
+          # допускаются пропуски и нумерация не по порядку
+
+          name: "PinOne"
+          # мнемоническое имя для управления топиком
+          # опционально.
+          # если не установлено - то используется номер контакта
+          
+          set_path: set
+          # имя топика для установки значения
+          # итоговое значение для записи:"common_path"/"control_path"/"name"/"set_path"
+          # опционально.
+          # если не установлено - то используется значение "set"         
+
+          clr_path: clr
+          # имя топика для сброса значения
+          # итоговое значение для записи:"common_path"/"control_path"/"name"/"clr_path"
+          # опционально.
+          # если не установлено - то используется значение "clr"   
+
+          repetition_time_sec: 500
+          # период принудительного отправки состояния в брокер
+          # дополнительно для данного конкретного контакта
+          # опционально.
+          # если не установлено - то все состояния контактов отправляются одновременно для каждого модуля
+          # Warning: дополнительный опрос модуля не производится!
+
+          start_state: "None"
+          # start_state: [0, 1, "LastState", "None"]
+          # установить состояние контакта вывода при старте сервиса
+          # 0 - сбросить все контакты
+          # 1 - установить все контакты
+          # "LastState" - восстановить последнее установленное значение
+          # "None" - ничего не предпринимать
+          # опционально.
+          # если не установлено - то используется значение из вышестоящей секции
+          # значения 0, 1, "LastState" - перезаписываЮТ соответствующие поля вышестоящей секции
+          # значение "None" - перезаписываЮТСЯ соответствующиМИ поляМИ вышестоящей секции
+
+      - type: di8
 
 
 sysfs_pins:
