--- a/project/src/config.yaml
+++ b/project/src/config.yaml
@@ -135,8 +135,8 @@ ext_i2c:
           start_state: "None"
           # start_state: [0, 1, "LastState", "None"]
           # установить состояние контакта вывода при старте сервиса
-          # 0 - сбросить все контакты
-          # 1 - установить все контакты
+          # 0 - сбросить контакт
+          # 1 - установить контакт
           # "LastState" - восстановить последнее установленное значение
           # "None" - ничего не предпринимать
           # опционально.
