parser for the new config

--- a/project/src/config.yaml
+++ b/project/src/config.yaml
@@ -43,7 +43,7 @@ ext_i2c:
     repetition_time_sec: 500
     # период принудительного опроса и отправки состояния в брокер
     # опционально.
-    # если не установлено - то отправка только по изменению
+    # если не установлено или 0 - то отправка только по изменению
 
     reset_to_def_topic: reset_all
     # пример: Relative/Path/To/Set/Topic 
