File parsing seems ok

--- a/project/src/config.yaml
+++ b/project/src/config.yaml
@@ -107,6 +107,7 @@ ext_i2c:
         - num: 1 
           # номер контакта, к которому задаются индивидуальные настройки
           # допускаются пропуски и нумерация не по порядку
+          # нумерация начинается с 1
 
           name: "PinOne"
           # мнемоническое имя для управления топиком
