state send and bugfixing

--- a/project/src/config.yaml
+++ b/project/src/config.yaml
@@ -72,16 +72,17 @@ ext_i2c:
     modules:
       # отбика каждой следующей дочерней секции производится через отступы и символы "-"
 
-      - type: do16  
+      - type: do12
         # тип модуля из поддерживаемых вариантов
 
-        repetition_time_sec: 500
+        repetition_time_sec: 100
         # период принудительного опроса и отправки состояния в брокер
         # индивидуально для данного конкретного модуля
         # опционально.
         # если не установлено - то используется значение из вышестоящей секции
+        # Warning: дополнительный опрос модуля не производится!
 
-        control_path: do16/controls
+        control_path: doXXX/controls
         # относительный путь для управления и индикации состояния данного конкретного модуля
         # сценарий: используется для добавления дополнительных уровней в имя топика
         # пример: module_name/control
@@ -126,13 +127,6 @@ ext_i2c:
           # опционально.
           # если не установлено - то используется значение "clr"   
 
-          repetition_time_sec: 500
-          # период принудительного отправки состояния в брокер
-          # дополнительно для данного конкретного контакта
-          # опционально.
-          # если не установлено - то все состояния контактов отправляются одновременно для каждого модуля
-          # Warning: дополнительный опрос модуля не производится!
-
           start_state: "None"
           # start_state: [0, 1, "LastState", "None"]
           # установить состояние контакта вывода при старте сервиса
@@ -145,7 +139,7 @@ ext_i2c:
           # значения 0, 1, "LastState" - перезаписываЮТ соответствующие поля вышестоящей секции
           # значение "None" - перезаписываЮТСЯ соответствующиМИ поляМИ вышестоящей секции
 
-      - type: di8
+      - type: di14
 
 
 sysfs_pins:
