support for x8 modules

--- a/project/src/config.yaml
+++ b/project/src/config.yaml
@@ -72,6 +72,8 @@ ext_i2c:
     modules:
       # отбика каждой следующей дочерней секции производится через отступы и символы "-"
 
+      - type: do8
+
       - type: do12
         # тип модуля из поддерживаемых вариантов
 
@@ -144,6 +146,7 @@ ext_i2c:
           # значение "None" - перезаписываЮТСЯ соответствующиМИ поляМИ вышестоящей секции
 
       - type: di14
+      #- type: di8
 
 
 sysfs_pins:
