--- a/project/scripts/package/etc/gpio-mqtt/config.yaml
+++ b/project/scripts/package/etc/gpio-mqtt/config.yaml
@@ -6,7 +6,7 @@ broker:
 
 # Общие настройки (по умолчанию) для всех объектов приложения
 cfg:
-  pool_period_ms: 100
+  pull_period_ms: 100
   changes_only: True
   status_period_sec: 600
 
@@ -16,7 +16,7 @@ sysfs_pins:
   # - title: none                           # ! Начало описания элемента - обязательно отбивка через дефис и выравнивание
   #   name: TEXT                            # * Символическое имя, используемое для ссылок
   #   type: IN | OUT                        # !  
-  #   pool_period_ms: #                     # * Возможность задать независимое время опроса
+  #   pull_period_ms: #                     # * Возможность задать независимое время опроса
   #   changes_only: BOOL                    # * Возможность передавать только изменения параметра
   #   status_period_sec: #                  # * При установке параметра осуществляется периодическая безусловная передача значения
   #   topic: "full/path/to/topic_name"      # ! топик для значения - сокращенная запись для чтения и записи
