--- a/project/src/config.yaml
+++ b/project/src/config.yaml
@@ -5,7 +5,7 @@ broker:
   password: ""
 
 cfg:
-  pool_period_ms: 100
+  pull_period_ms: 100
   changes_only: True
   status_period_sec: 10
 
@@ -145,6 +145,9 @@ ext_i2c:
           # значения 0, 1, "LastState" - перезаписываЮТ соответствующие поля вышестоящей секции
           # значение "None" - перезаписываЮТСЯ соответствующиМИ поляМИ вышестоящей секции
 
+          invert: True
+          # Инвертировать значение при отправке на шину
+
       - type: di14
       #- type: di8
 
@@ -154,7 +157,7 @@ sysfs_pins:
   # - title: none                           # ! Начало описания элемента
   #   name: TEXT                            # * Символическое имя, используемое для ссылок
   #   type: IN | OUT                        # !  
-  #   pool_period_ms: #                     # * Возможность задать независимое время опроса
+  #   pull_period_ms: #                     # * Возможность задать независимое время опроса
   #   changes_only: BOOL                    # * Возможность передавать только изменения параметра
   #   topic: "full/path/to/topic_name"      # ! топик для управления значением
   #   file_value: "full/path/to/file_name"  # ! файл для записи значения
@@ -169,7 +172,7 @@ sysfs_pins:
   # JH D1
   # - name: LedRed
   #   type: OUT
-  #   pool_period_ms: 100
+  #   pull_period_ms: 100
   #   changes_only: False
   #   topic: "test/dev/LedRed"
   #   file_value: "/sys/class/gpio/gpio538/value"
@@ -188,7 +191,7 @@ sysfs_pins:
 
   # - name: UserBtn
   #   type: IN
-  #   pool_period_ms: 100
+  #   pull_period_ms: 100
   #   changes_only: True
   #   topic: "test/dev/UserBtn"
   #   file_value: "/sys/class/gpio/gpio522/value"
@@ -247,7 +250,7 @@ sysfs_pins:
 #     file_value: "/sys/class/gpio/gpio542/value"
 #     create_start_topic: True
 #     changes_only: True
-#     pool_period_ms: 1000
+#     pull_period_ms: 1000
 #     status_period_sec: 600
 
 # ######################################################################
@@ -271,7 +274,7 @@ sysfs_pins:
 
   # WB7
   # - name: Mod1_K12
-  #   pool_period_ms: 100
+  #   pull_period_ms: 100
   #   changes_only: False
   #   topic: "dev/extender/do12"
   #   file_value: "/sys/class/gpio/gpio563/value"
@@ -283,7 +286,7 @@ sysfs_pins:
   #     - file: "/sys/class/gpio/gpio563/direction"
   #       text: "out"
   # - name: Mod2_DI1
-  #   pool_period_ms: 100
+  #   pull_period_ms: 100
   #   changes_only: False
   #   topic: "dev/extender/di1"
   #   file_value: "/sys/class/gpio/gpio512/value"
